# panels-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libpanels/: README.md
libpanels/doc/: CMakeLists.txt  Doxyfile.in  formats.dox
libpanels/include/libpanels/: Assert.h  BuildSolver.h  Geometry.h  InviscidSolution.h  InviscidSolver.h  Solver.h  Utils.h
libpanels/include/libpanels/src/: BuilderBoilerplate.h
libpanels/include/libpanels/src/BuildSolver/: Implement.h
libpanels/include/libpanels/src/Geometry/: IO.h  NACA.h
libpanels/include/libpanels/src/Inviscid/Solution/: IO.h  VelField.h
libpanels/include/libpanels/src/Inviscid/Solver/: Build.h  Builders.h  IO.h  Solve.h
libpanels/include/libpanels/src/InviscidSolver/: Build.h  Builders.h  IO.h  Solve.h
src/: Main.cpp  Util.h
src/XFoilVerify/: XFoilWrapper.cpp  XFoilWrapper.h
